# AssitentMamaRustBackend

./: .env  .gitignore  Cargo.toml
data/: assistant_mama_backend.db
src/: main.rs
src/models/: date.rs  message.rs  mod.rs  news.rs  weather.rs
src/routes/: log.rs  message.rs  mod.rs  root.rs
src/services/: audio_service.rs  database_service.rs  mod.rs  news_service.rs  weather_service.rs
src/utils/: date_utils.rs
voices_marcia/bruno_gym/: play_audio_loop.sh
