[package]
name = "assistant_mama_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.3", features = ["v4"] }
mp3-duration = "0.1.10"
tower = "0.5"
